# OpenCV_Yolov11

./: CMakeLists.txt  README.md  main.cpp
